--- a/template/kamihi.yml.jinja
+++ b/template/kamihi.yml.jinja
@@ -1,4 +1,4 @@
----
+# Kamihi configuration file
 
 token: YOUR_TOKEN_HERE # The token you get from the BotFather
 timezone: UTC # Timezone for the bot
