--- a/template/docker-compose.dev.yml.jinja
+++ b/template/docker-compose.dev.yml.jinja
@@ -1,17 +1,17 @@
 ---
 
 volumes:
-  mongodb:
+  pgdata:
 
 services:
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
+  postgres:
+    image: postgres:latest
+    container_name: postgres
     restart: unless-stopped
     volumes:
-      - mongodb:/data/db
+      - pgdata:/var/lib/postgresql/data
     ports:
-      - "27017:27017"
+      - "5432:5432"
 
   {{ project_name_kebab_case }}:
     build:
@@ -20,11 +20,9 @@ services:
     container_name: {{ project_name_kebab_case }}
     restart: unless-stopped
     depends_on:
-      - mongodb
+      - postgres
     ports:
       - "4242:4242"
-    environment:
-      - KAMIHI_DB__HOST=mongodb
     develop:
       watch:
         - action: sync+restart
