--- a/template/models/user.py.jinja
+++ b/template/models/user.py.jinja
@@ -1,13 +1,4 @@
-from kamihi import bot, BaseUser
-from mongoengine import StringField
+from kamihi import BaseUser
 
-
-
-# Uncomment the following line if you want to register the user class with the bot
-# @bot.user_class
 class User(BaseUser):
-    """
-    Custom user class for {{ project_name }}.
-    This class can be extended to add custom attributes or methods.
-    """
-    name: str = StringField()
+    __table_args__ = {'extend_existing': True}
