--- a/template/models/user.py.jinja
+++ b/template/models/user.py.jinja
@@ -1,4 +1,4 @@
-from kamihi import BaseUser
+from kamihi.db import BaseUser
 
 class User(BaseUser):
     __table_args__ = {'extend_existing': True}
